Style: Fix spacing/layout of game container

--- a/src/style.css
+++ b/src/style.css
@@ -143,12 +143,15 @@ h1 {
 
 #game_container {
   display: none;
-  gap: 1rem;
-  margin: 3rem 1rem;
+  margin: 2rem;
+  gap: 1.5rem;
+
   align-items: center;
   justify-items: center;
-  grid-template-rows: 4fr 75px;
-  grid-template-columns: repeat(4, 1fr);
+
+  grid-template-columns: repeat(2, minmax(700px, 1fr));
+  grid-template-rows: 50px 1fr;
+  grid-auto-rows: 50px;
 }
 
 .board {
@@ -160,18 +163,42 @@ h1 {
   grid-template-columns: 50px 500px;
 }
 
-#user_board {
+.board_header {
+  background-color: var(--clr-board);
+  padding: 0.5rem 3rem;
+  font-family: var(--ff-accent);
+  font-size: var(--fs-600);
+  font-weight: var(--fw-bold);
+}
+
+.board_header.ocean {
   grid-row: 1 / 2;
-  grid-column: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.board_header.target {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+#user_board {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 
 #target_board {
-  grid-row: 1 / 2;
-  grid-column: 3 / 5;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
-.num_labels,
-.letter_labels {
+.board_buttons {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-evenly;
+}
+
+.number,
+.letter {
   font-family: var(--ff-accent);
   font-weight: var(--fw-bold);
   font-size: var(--fs-500);
